# longan-nano-template

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  cargo-generate.toml  openocd.gdb
.cargo/: config
.github/workflows/: ci.yml
src/: lib.rs  main.rs
