[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/yoshanuikabundi/{{project-name}}"
license = "ISC"
readme = "README.md"
description = "{{project-name}}" # Description that appears in crates.io
keywords = [] # Keywords for discoverability. crates.io accepts a maximum of 5 keywords fitting the regex /[a-Z][a-Z0-9\-_]{0,19}/
categories = ["embedded", "no-std"] # Categories for discoverability. crates.io accepts a maximum of 5 categories from the list at https://crates.io/category_slugs

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gd32vf103xx-hal = "0.4.0"
embedded-hal = "0.2.3"
nb = "0.1.2"
riscv = "0.6.0"
st7735-lcd = "0.7"
longan-nano = "0.2.0"
riscv-rt = "0.8.0"
panic-halt = "0.2.0"
embedded-graphics = "0.6"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
